타입스크립트 프로젝트 셋팅

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node *.js"
+
   },
   "repository": {
     "type": "git",
